Make code is compatible with diffrent ifaddrs strcucture

OpenSolaris (after b137) uses "struct sockaddr_storage", not "struct sockaddr"
for ifa_addr member of "struct ifaddrs". This is followed RFC2553. Before
BSD and Linux systems move to follow RFC2553, the codes need to be compiled
under both cases.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=617848